; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_WaitIO.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_WaitIO.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BM_IO_IN_PROGRESS = common dso_local global i32 0, align 4
@LW_SHARED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @WaitIO to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @WaitIO(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @LockBufHdr(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @UnlockBufHdr(i32* %7, i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @BM_IO_IN_PROGRESS, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %4
  br label %23

15:                                               ; preds = %4
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @BufferDescriptorGetIOLock(i32* %16)
  %18 = load i32, i32* @LW_SHARED, align 4
  %19 = call i32 @LWLockAcquire(i32 %17, i32 %18)
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @BufferDescriptorGetIOLock(i32* %20)
  %22 = call i32 @LWLockRelease(i32 %21)
  br label %4

23:                                               ; preds = %14
  ret void
}

declare dso_local i32 @LockBufHdr(i32*) #1

declare dso_local i32 @UnlockBufHdr(i32*, i32) #1

declare dso_local i32 @LWLockAcquire(i32, i32) #1

declare dso_local i32 @BufferDescriptorGetIOLock(i32*) #1

declare dso_local i32 @LWLockRelease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
